--- a/tutorials/Vowel_animations.Rmd
+++ b/tutorials/Vowel_animations.Rmd
@@ -19,6 +19,17 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This document will give you the basic code structure to generate an aninmated vowel plot. It will give comments on what the different parts of code do, but if anything is unclear do let me know (<james.brand@canterbury.ac.nz>).
 
+## R markdown file
+The .Rmd file used to generate this file can be downloaded from
+
+<https://jamesbrandscience.github.io/tutorials/Vowel_animations.Rmd>
+
+## Data
+
+The data required to run the tutorial can be downloaded from
+
+<https://jamesbrandscience.github.io/tutorials/Vowel_animations_data.csv>
+
 # Packages
 
 In order for the code to run we need to install/load certain R packages. This can be done with the code below, which will check for the package and then install or load it for you:
