--- a/tutorials/ERCEL/ERCEL_ggplot.Rmd
+++ b/tutorials/ERCEL/ERCEL_ggplot.Rmd
@@ -17,6 +17,50 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{css echo=FALSE}
+.goog-tooltip {
+    display: none !important;
+}
+.goog-tooltip:hover {
+    display: none !important;
+}
+.goog-text-highlight {
+    background-color: transparent !important;
+    border: none !important; 
+    box-shadow: none !important;
+}
+
+```
+
+---
+
+### Worksheet translations available
+
+Disclaimer: may not be very accurate...
+
+<div id="google_translate_element"></div>
+
+<script>
+
+function googleTranslateElementInit() {
+
+new google.translate.TranslateElement({
+
+pageLanguage: 'en'
+
+}, 'google_translate_element');
+
+}
+
+</script>
+
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+
+</script>
+
+---
+
+
 # Learning outcomes {.unnumbered}
 
 At the end of the day you should be able to:
